# AutSys_Labs_ROS2_Testframework

Assignment_2/testframework/: CMakeLists.txt  package.xml
Assignment_2/testframework/launch/: test.launch.py
Assignment_2/testframework/src/: controller_test.cpp
Assignment_2/testing/: autograding.json  build_script.sh  run_script.sh  testing.cpp
Assignment_3/testframework/: CMakeLists.txt  package.xml
Assignment_3/testframework/config/: referenceVertex.yaml
Assignment_3/testframework/include/: trajectory_test.hpp
Assignment_3/testframework/launch/: test.launch.py
Assignment_3/testframework/src/: trajectory_test.cpp
Assignment_3/testing/: autograding.json  build_script.sh  run_script.sh  testing.cpp
