<?xml version="1.0"?>
<package format="3">
  <name>testframework</name>
  <version>0.0.0</version>
  <description>The UAV controller package</description>

  <maintainer email="antonap@mit.edu">Pasquale Antonante</maintainer>
  <license>MIT</license>

  <!-- Build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>tf2_eigen</depend>
  <depend>mav_msgs</depend>
  
  <build_depend>eigen3_cmake_module</build_depend>
  <depend>eigen</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
