<?xml version="1.0"?>
<package format="3">
  <name>testframework</name>
  <version>0.0.0</version>
  <description>The UAV controller test framework package</description>

  <maintainer email="antonap@mit.edu">Pasquale Antonante</maintainer>
  <license>MIT</license>

  <!-- Build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core ROS2 dependencies -->
  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>mav_msgs</depend>
  <depend>mav_planning_msgs</depend>

  <!-- Eigen is used directly in C++ -->
  <build_depend>Eigen3</build_depend>
  <exec_depend>Eigen3</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
